# shiny-happiness

./: .gitignore  pyproject.toml
src/: handle_on_startup.py  main.py
src/assets/: exame_admissional_sesi.docx  ficha_da_contabilidade.xlsx
src/config/: database.py
src/controllers/: banks.py  cities.py  civil_status.py  cnh_categories.py  departments.py  employee_status.py  employees.py  ethnicities.py  experiences_times.py  functions.py  genders.py  hierarchy_structure.py  nationalities.py  neighborhoods.py  payment_methods.py  sales_report.py  school_levels.py  sectors.py  states.py  turns.py  users.py  workdays.py
src/helpers/: decode_pdf_fields.py  encode_pdf_fields.py  ensure_pdf.py  get_binary_fields.py  handle_update_xlsx_rows.py  parse_dates.py  set_checkbox.py
src/middlewares/: cors.py
src/migrations/: watch.py
src/models/: banks.py  cities.py  civil_status.py  cnh_categories.py  departments.py  employee_status.py  employees.py  employees_parents.py  ethnicities.py  experiences_times.py  functions.py  genders.py  hierarchy_structure.py  nationalities.py  neighborhoods.py  payment_methods.py  school_levels.py  sectors.py  states.py  subsidiaries.py  turns.py  users.py  users_subsidiaries.py  workdays.py
src/routes/: banks.py  cities.py  civil_status.py  cnh_categories.py  departments.py  employee_status.py  employees.py  ethnicities.py  experiences_times.py  functions.py  genders.py  hierarchy_structure.py  nationalities.py  neighborhoods.py  payment_methods.py  private.py  public.py  sales_report.py  school_levels.py  sectors.py  states.py  turns.py  (+3 more)
(+25 files in other folders)
